[UPDATE]: Se actualzia docuemntacion de swagger con nuevos endpoints de observabilidad
